# rado

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md  build.rs  design.md  formalisms.md  history.md  lang.md  lang.old.md  links.md  todo.md
samples/alttp/: config.gold.rson  config.pr  config.rado  items.gold.rson  items.pr  items.rado  regions.gold.rson  regions.pr
src/: ast.rs  exts.rs  lib.rs  token.rs
src/ast/: parse.lalrpop  parse.rs
