[package]
name = "peri-lang"
version = "0.1.0"
authors = ["Alexis Hunt <alercah@gmail.com>"]
edition = '2018'

[build-dependencies]
lalrpop = "0.16"

[dependencies]
either = "1.5.0"
failure = "0.1.1"
id-map = "0.2.1"
lalrpop-util = "0.16"
mixed_ref = "0.1.1"
rson_rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
string-interner = "0.7.0"

[dependencies.guard]
version = "0.4.0"
features = ["nightly"]

[dependencies.num-bigint]
version = "0.2.1"
features = ["serde"]

[dependencies.num-rational]
version = "0.2.1"
features = ["serde"]

[dev-dependencies]
proptest = "0.7.0"
difference = "2.0.0"
