[package]
name = "rado"
version = "0.1.0"
authors = ["Alexis Hunt <alercah@gmail.com>"]
edition = '2018'

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
either = "1.5.0"
anyhow = "1.0.31"
thiserror = "1.0"
guard = "0.5.0"
id-map = "0.2.1"
lalrpop-util = "0.19.0"
mixed_ref = "0.1.1"
rson_rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
string-interner = "0.7.0"
unic-ucd-ident = "0.9.0"
unic-normal = "0.9.0"

[dependencies.num-bigint]
version = "0.2.1"
features = ["serde"]

[dependencies.num-rational]
version = "0.2.1"
features = ["serde"]

[dev-dependencies]
proptest = "0.7.0"
difference = "2.0.0"
